tests/frontend/pass/multi/multi.act
contract B

contract A

constructor
interface constructor()

creates
   uint x := 0

constructor
interface constructor()

creates
   uint y := 0
   A a := create A()

transition remote
interface remote(uint z)

iff
   CALLVALUE == 0

storage
   a.x := z

transition multi
interface multi(uint z)

iff
   CALLVALUE == 0

storage
   y := 1
   a.x := z
